[package]
name = "prost-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
prost-build-config = "0.6.3"
prost-types = "0.12.3"
serde = "1.0.204"

[build-dependencies]
prost-build = "0.12.3"
