[package]
name = "tonic-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
prost = "0.12.6"
prost-types = "0.12.6"
tokio ={version = "1.38.0",features = ["macros","rt","rt-multi-thread"]}
tonic = "0.11.0"
[build-dependencies]
prost-build = "0.12.6"
tonic-build = "0.11.0"
[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"
